--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4250">
-	<link rel="stylesheet" type="text/css" href="style.css?1716">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3369">
+	<link rel="stylesheet" type="text/css" href="style.css?2177">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -31,7 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc" id="bloc-0">
+<div class="bloc none l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col">
@@ -45,23 +45,36 @@
 							<div class="collapse navbar-collapse navbar-32798">
 								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
-										<a href="index.html" class="nav-link">Home</a>
+										<a href="index.html" class="nav-link a-btn">Home</a>
 									</li>
 									<li class="nav-item">
 										<a href="about.html" class="nav-link">About</a>
 									</li>
 									<li class="nav-item">
-										<a href="podcast.html" class="nav-link">Podcast</a>
+										<div class="dropdown btn-dropdown">
+											<a href="#" class="nav-link dropdown-toggle a-btn" data-toggle="dropdown" aria-expanded="false">Events</a>
+											<ul class="dropdown-menu" role="menu">
+												<li class="nav-item">
+													<a href="5th-oct-2023.html" class="nav-link a-btn">5th Oct 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="19th-oct-2023.html" class="nav-link a-btn">19th Oct 2023</a>
+												</li>
+											</ul>
+										</div>
 									</li>
 									<li class="nav-item">
 										<div class="dropdown btn-dropdown">
 											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="spring-2022.html" class="nav-link a-btn">Spring 2022</a>
+													<a href="2022-23.html" class="nav-link">2022-23</a>
 												</li>
 												<li class="nav-item">
-													<a href="index.html" class="a-btn nav-link">New Link</a>
+													<a href="spring-2022.html" class="nav-link">Spring 2022</a>
+												</li>
+												<li class="nav-item">
+													<a href="spring-2020.html" class="nav-link">Spring 2020</a>
 												</li>
 												<li class="nav-item">
 													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
@@ -70,10 +83,13 @@
 													<a href="spring-2018.html" class="nav-link">Spring 2018</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2017.html" class="nav-link a-btn">Spring 2017</a>
+													<a href="spring-2017.html" class="nav-link">Spring 2017</a>
 												</li>
 											</ul>
 										</div>
+									</li>
+									<li class="nav-item">
+										<a href="podcast.html" class="nav-link">Podcast</a>
 									</li>
 									<li class="nav-item">
 										<a href="contact.html" class="nav-link">Contact</a>
@@ -90,10 +106,10 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1 -->
-<div class="bloc bgc-ferrari-red none d-bloc" id="bloc-1">
-	<div class="container bloc-md">
+<div class="bloc l-bloc full-width-bloc" id="bloc-1">
+	<div class="container bloc-lg bloc-no-padding-lg">
 		<div class="row">
-			<div class="col">
+			<div class="col text-md-left text-center bgc-ferrari-red col-lg-12">
 				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" />
 			</div>
 		</div>
@@ -107,31 +123,31 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="mg-md h3-style h1-style">
-					Happy Hour 2022-23
+					Happy Hour 2023-24
 				</h1>
 				<p class="p-1-bloc-2-style mg-lg">
-					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>We are running Happy Hour Talks before the 2022 Winter break, and we will start again from March to April 2023<br><br>Some weeks we will have one or two speakers and panel discussions - <strong>each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays</strong> in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, S014 0YN.</a>&nbsp;We normally continue the discussion in the pub.&nbsp; <br><br>
+					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>We are running Happy Hour Talks every other week in the first two semesters starting on 5th October 2023<br><br>
 				</p><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_NOV_2022_WEB.jpg" class="img-fluid mx-auto d-block lazyload" alt="HAPPY_HOUR_NOV_2022_WEB" />
 			</div>
 		</div>
 		<div class="row voffset-lg">
 			<div class="align-self-center col-lg-3 col-md-6">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/pict%20copy.jpg" class="img-fluid mx-auto d-block lazyload" alt="Screenshot%202022 10-30%20at%2014.23.54" />
+					<img src="img/lazyload-ph.png" data-src="img/354441808_10168317563430294_2330253690648159454_n.jpg" class="img-fluid mx-auto d-block lazyload" alt="Screenshot%202022 10-30%20at%2014.23.54" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
-							<strong>Student Panel</strong><br>Getting Your First Job<br>&amp; Placements<br><strong>24/11/2022</strong>
-						</p><a href="https://www.eventbrite.co.uk/e/panel-discussion-work-experience-getting-your-first-job-tickets-453020014057" class="btn btn-block btn-ferrari-red">Event 1 register</a>
+							<strong>Juniper Networks</strong><br>Placements, Getting Your <br>First Job &amp; Working in Tech<br><strong>5/10/2023</strong>
+						</p><a href="5th-oct-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
 					</div>
 				</div>
 			</div>
 			<div class="mt-3 col-lg-3 col-md-6 mt-md-0 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_238055399_62675278207_1_original.jpeg" class="img-fluid mx-auto lazyload" alt="place_holder_face_2" />
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_1.jpg" class="img-fluid mx-auto lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-bloc-2-style">
-							<strong>John Kilmister</strong><br>A Day in the Life of a Developer &amp; Cloud Dev<br><strong>9/3/2023</strong><br>
-						</p><a href="https://www.eventbrite.co.uk/e/john-kilmister-tickets-564408349567" class="btn btn-block btn-ferrari-red">Event 2 register</a>
+							<strong>TBC</strong><br>TBC<br>TBC<br><strong>19/10/2023</strong><br>
+						</p><a href="index.html" class="btn btn-block btn-ferrari-red">More Details</a>
 					</div>
 				</div>
 			</div>
@@ -199,19 +215,16 @@
 <!-- ScrollToTop Button END-->
 
 
-<!-- bloc-5 -->
-<div class="bloc bgc-black d-bloc" id="bloc-5">
-	<div class="container bloc-lg">
+<!-- bloc-33 -->
+<div class="bloc l-bloc full-width-bloc" id="bloc-33">
+	<div class="container bloc-lg bloc-no-padding-lg">
 		<div class="row">
-			<div class="col">
-				<div class="text-center">
-					<a href="https://twitter.com/WebDevSolent"><span class="icon-xl icon-white fab fa-twitter"></span></a>
-				</div>
+			<div class="col text-md-left text-center bgc-ferrari-red">
 			</div>
 		</div>
 	</div>
 </div>
-<!-- bloc-5 END -->
+<!-- bloc-33 END -->
 
 </div>
 <!-- Main container END -->
@@ -219,9 +232,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3201"></script>
-<script src="./js/bootstrap.bundle.min.js?7143"></script>
-<script src="./js/blocs.min.js?6390"></script>
+<script src="./js/jquery.min.js?1578"></script>
+<script src="./js/bootstrap.bundle.min.js?8986"></script>
+<script src="./js/blocs.min.js?1115"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
