--- a/podcast.html
+++ b/podcast.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7654">
-	<link rel="stylesheet" type="text/css" href="style.css?4175">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6454">
+	<link rel="stylesheet" type="text/css" href="style.css?2226">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Podcast</title>
@@ -32,7 +32,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc" id="bloc-0">
+<div class="bloc none l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col">
@@ -46,23 +46,36 @@
 							<div class="collapse navbar-collapse navbar-32798">
 								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
-										<a href="index.html" class="nav-link">Home</a>
+										<a href="index.html" class="nav-link a-btn">Home</a>
 									</li>
 									<li class="nav-item">
 										<a href="about.html" class="nav-link">About</a>
 									</li>
 									<li class="nav-item">
-										<a href="podcast.html" class="nav-link">Podcast</a>
+										<div class="dropdown btn-dropdown">
+											<a href="#" class="nav-link dropdown-toggle a-btn" data-toggle="dropdown" aria-expanded="false">Events</a>
+											<ul class="dropdown-menu" role="menu">
+												<li class="nav-item">
+													<a href="5th-oct-2023.html" class="nav-link a-btn">5th Oct 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="19th-oct-2023.html" class="nav-link a-btn">19th Oct 2023</a>
+												</li>
+											</ul>
+										</div>
 									</li>
 									<li class="nav-item">
 										<div class="dropdown btn-dropdown">
 											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="spring-2022.html" class="nav-link a-btn">Spring 2022</a>
+													<a href="2022-23.html" class="nav-link">2022-23</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2020.html" class="a-btn nav-link">Spring 2020</a>
+													<a href="spring-2022.html" class="nav-link">Spring 2022</a>
+												</li>
+												<li class="nav-item">
+													<a href="spring-2020.html" class="nav-link">Spring 2020</a>
 												</li>
 												<li class="nav-item">
 													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
@@ -71,10 +84,13 @@
 													<a href="spring-2018.html" class="nav-link">Spring 2018</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2017.html" class="nav-link a-btn">Spring 2017</a>
+													<a href="spring-2017.html" class="nav-link">Spring 2017</a>
 												</li>
 											</ul>
 										</div>
+									</li>
+									<li class="nav-item">
+										<a href="podcast.html" class="nav-link">Podcast</a>
 									</li>
 									<li class="nav-item">
 										<a href="contact.html" class="nav-link">Contact</a>
@@ -91,10 +107,10 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1 -->
-<div class="bloc bgc-ferrari-red none d-bloc" id="bloc-1">
-	<div class="container bloc-md">
+<div class="bloc l-bloc full-width-bloc" id="bloc-1">
+	<div class="container bloc-lg bloc-no-padding-lg">
 		<div class="row">
-			<div class="col ">
+			<div class="col text-md-left text-center bgc-ferrari-red col-lg-12">
 				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" />
 			</div>
 		</div>
@@ -154,19 +170,16 @@
 <!-- ScrollToTop Button END-->
 
 
-<!-- bloc-5 -->
-<div class="bloc bgc-black d-bloc" id="bloc-5">
-	<div class="container bloc-lg">
+<!-- bloc-33 -->
+<div class="bloc l-bloc full-width-bloc" id="bloc-33">
+	<div class="container bloc-lg bloc-no-padding-lg">
 		<div class="row">
-			<div class="col">
-				<div class="text-center">
-					<a href="https://twitter.com/WebDevSolent"><span class="icon-xl icon-white fab fa-twitter"></span></a>
-				</div>
+			<div class="col text-md-left text-center bgc-ferrari-red">
 			</div>
 		</div>
 	</div>
 </div>
-<!-- bloc-5 END -->
+<!-- bloc-33 END -->
 
 </div>
 <!-- Main container END -->
@@ -174,9 +187,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?5048"></script>
-<script src="./js/bootstrap.bundle.min.js?2776"></script>
-<script src="./js/blocs.min.js?2178"></script>
+<script src="./js/jquery.min.js?1578"></script>
+<script src="./js/bootstrap.bundle.min.js?8986"></script>
+<script src="./js/blocs.min.js?1115"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
