--- a/19th-oct-2023.html
+++ b/19th-oct-2023.html
@@ -5,13 +5,14 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?986">
-	<link rel="stylesheet" type="text/css" href="style.css?4744">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2166">
+	<link rel="stylesheet" type="text/css" href="style.css?1502">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>Contact</title>
+    <title>19th Oct 2023</title>
 
 
     
@@ -117,47 +118,19 @@
 </div>
 <!-- bloc-1 END -->
 
-<!-- bloc-4 -->
-<div class="bloc tc-black l-bloc" id="bloc-4">
+<!-- bloc-30 -->
+<div class="bloc l-bloc" id="bloc-30">
 	<div class="container bloc-lg">
 		<div class="row">
-			<div class="col">
-				<h1 class="mg-md text-center">
-					Contact the organisers
+			<div class="col text-md-left text-center">
+				<h1 class="mg-md">
+					Hello 2
 				</h1>
-			</div>
-		</div>
-		<div class="row voffset-xs">
-			<div class="col-md-6 col-lg-4 offset-lg-2">
-				<img src="img/lazyload-ph.png" data-src="img/APaFdH4r_400x400.jpg" class="img-fluid rounded-circle mx-auto d-block img-15-style lazyload" alt="APaFdH4r_400x400" />
-				<h2 class="mg-md text-lg-center tc-black text-center">
-					Martin Reid
-				</h2>
-				<p class="text-lg-center text-center">
-					martin.reid@solent.ac.uk
-				</p>
-				<div class="row">
-					<div class="col col-lg-4">
-						<div class="text-center">
-							<a href="https://twitter.com/martinGreid"><span class="icon-md fab fa-twitter-square"></span></a>
-						</div>
-					</div>
-					<div class="col">
-						<div class="text-center">
-							<a href="https://github.com/martinsolent"><span class="icon-md fab fa-github-square"></span></a>
-						</div>
-					</div>
-					<div class="col">
-						<div class="text-center">
-							<a href="https://medium.com/@martinreid"><span class="icon-md fab fa-medium"></span></a>
-						</div>
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- bloc-4 END -->
+<!-- bloc-30 END -->
 
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 32 32"><path class="scroll-to-top-btn-icon" d="M30,22.656l-14-13-14,13"/></svg></a>
