--- a/5th-oct-2023.html
+++ b/5th-oct-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9219">
-	<link rel="stylesheet" type="text/css" href="style.css?4686">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7506">
+	<link rel="stylesheet" type="text/css" href="style.css?5842">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Juniper Networks</title>
@@ -32,8 +32,8 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc " id="bloc-0">
-	<div class="container bloc-sm">
+<div class="bloc none l-bloc" id="bloc-0">
+	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
 				<div class="row">
@@ -119,13 +119,16 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-29 -->
-<div class="bloc" id="bloc-29">
-	<div class="container bloc-lg">
+<div class="bloc tc-black-2" id="bloc-29">
+	<div class="container bloc-sm-lg bloc-sm">
 		<div class="row">
 			<div class="col text-md-left text-center">
-				<h1 class="mg-md tc-black-2">
+				<h1 class="tc-black-2 mg-sm h1-bloc-29-style ">
 					Juniper Networks
 				</h1><img src="img/lazyload-ph.png" data-src="img/HH_juniper.jpg" class="img-fluid mx-auto d-block lazyload" alt="HH_juniper" />
+				<p class="p-bloc-29-style">
+					From Left to right:&nbsp;Chris Howarth, Ben Peckham &amp;&nbsp;Ian Jarrett
+				</p>
 			</div>
 		</div>
 	</div>
@@ -134,10 +137,10 @@
 
 <!-- bloc-30 -->
 <div class="bloc tc-black-2" id="bloc-30">
-	<div class="container bloc-lg bloc-no-padding-lg">
+	<div class="container bloc-sm-lg bloc-no-padding">
 		<div class="row">
 			<div class="col text-md-left text-center">
-				<h2 class="mg-clear">
+				<h2 class="mg-clear h2-style">
 					Thursday 5th October 2023 17:00-18:00 – Palmerston Lecture Theatre
 				</h2>
 				<p class="mg-clear p-bloc-30-style">
@@ -151,25 +154,19 @@
 
 <!-- bloc-31 -->
 <div class="bloc tc-black-2" id="bloc-31">
-	<div class="container bloc-lg">
-		<div class="row voffset">
-			<div class="col-sm-4 col text-md-left text-center">
-				<img src="img/lazyload-ph.png" data-src="img/ben.jpg" class="img-fluid mx-auto d-block lazyload" alt="ben" />
-			</div>
-			<div class="col-sm-8 col text-md-left text-center">
+	<div class="container bloc-sm-lg bloc-no-padding">
+		<div class="row">
+			<div class="col-sm-8 text-md-left text-center col-lg-12">
 				<h3 class="mg-md tc-black-2">
 					Ben Peckham
 				</h3>
 				<p class="p-bloc-31-style">
-					Ben graduated Solent University in 2020 with a BSc in Cyber Security Management.<br>During his course, he completed a placement year in industry at Juniper Networks as a Proof-Of-Concept Engineer before returning for final year studies.<br><br>After graduating he returned to Juniper Networks as an Associate Systems Engineer, specializing in Enterprise network routing, switching and security and wireless technologies. Now Ben works with retail customers across the UK and Ireland, helping them to achieve technology transformations with Juniper technologies and solutions.<br><br><a href="index.html">https://www.linkedin.com/in/ben-peckham-835216151/</a> <br><br><br><br>
+					Ben graduated Solent University in 2020 with a BSc in Cyber Security Management.<br>During his course, he completed a placement year in industry at Juniper Networks as a Proof-Of-Concept Engineer before returning for final year studies.<br><br>After graduating he returned to Juniper Networks as an Associate Systems Engineer, specializing in Enterprise network routing, switching and security and wireless technologies. Now Ben works with retail customers across the UK and Ireland, helping them to achieve technology transformations with Juniper technologies and solutions.<br><br><a href="index.html">https://www.linkedin.com/in/ben-peckham-835216151/</a><br>
 				</p>
 			</div>
 		</div>
-		<div class="row voffset">
-			<div class="col-sm-4 col text-md-left text-center">
-				<img src="img/lazyload-ph.png" data-src="img/chris_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="ben" />
-			</div>
-			<div class="col-sm-8 col text-md-left text-center">
+		<div class="row">
+			<div class="col-sm-8 text-md-left text-center col-lg-12">
 				<h3 class="mg-md tc-black-2">
 					Chris Howarth
 				</h3>
@@ -178,11 +175,8 @@
 				</p>
 			</div>
 		</div>
-		<div class="row voffset-md">
-			<div class="col-sm-4 col text-md-left text-center">
-				<img src="img/lazyload-ph.png" data-src="img/ian.jpg" class="img-fluid mx-auto d-block lazyload" alt="ben" />
-			</div>
-			<div class="col-sm-8 col text-md-left text-center">
+		<div class="row voffset">
+			<div class="col-sm-8 text-md-left text-center col-lg-12">
 				<h3 class="mg-md tc-black-2">
 					Ian Jarrett
 				</h3>
@@ -202,7 +196,7 @@
 
 <!-- bloc-33 -->
 <div class="bloc l-bloc full-width-bloc" id="bloc-33">
-	<div class="container bloc-lg bloc-no-padding-lg">
+	<div class="container bloc-lg bloc-sm-lg">
 		<div class="row">
 			<div class="col text-md-left text-center bgc-ferrari-red">
 			</div>
@@ -217,9 +211,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?1578"></script>
-<script src="./js/bootstrap.bundle.min.js?8986"></script>
-<script src="./js/blocs.min.js?1115"></script>
+<script src="./js/jquery.min.js?9483"></script>
+<script src="./js/bootstrap.bundle.min.js?1452"></script>
+<script src="./js/blocs.min.js?3418"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
