--- a/19th-oct-2023.html
+++ b/19th-oct-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2166">
-	<link rel="stylesheet" type="text/css" href="style.css?1502">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7120">
+	<link rel="stylesheet" type="text/css" href="style.css?6730">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>19th Oct 2023</title>
@@ -32,68 +32,68 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc " id="bloc-0">
-	<div class="container bloc-sm">
+<div class="bloc none l-bloc" id="bloc-0">
+	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
 				<div class="row">
 					<div class="col-12">
-						<nav class="navbar navbar-light row navbar-expand-md">
-							<a class="navbar-brand ltc-black link-style" href="index.html">Happy Hour</a>
+						<nav class="navbar row navbar-expand-md navbar-light">
+							<a class="navbar-brand link-style ltc-black" href="index.html">Happy Hour</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggler navbar-toggler border-0 p-0 mr-md-0 ml-auto" data-toggle="collapse" data-target=".navbar-32798" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
 								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
-										<a href="index.html" class="nav-link a-btn">Home</a>
+										<a href="index.html" class="nav-link  ltc-black">Home</a>
 									</li>
 									<li class="nav-item">
-										<a href="about.html" class="nav-link">About</a>
+										<a href="about.html" class="nav-link  ltc-black">About</a>
 									</li>
 									<li class="nav-item">
 										<div class="dropdown btn-dropdown">
-											<a href="#" class="nav-link dropdown-toggle a-btn" data-toggle="dropdown" aria-expanded="false">Events</a>
+											<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Events</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="5th-oct-2023.html" class="nav-link a-btn">5th Oct 2023</a>
+													<a href="5th-oct-2023.html" class="nav-link  ltc-black">5th Oct 2023</a>
 												</li>
 												<li class="nav-item">
-													<a href="19th-oct-2023.html" class="nav-link a-btn">19th Oct 2023</a>
+													<a href="19th-oct-2023.html" class="nav-link  ltc-black">19th Oct 2023</a>
 												</li>
 											</ul>
 										</div>
 									</li>
 									<li class="nav-item">
 										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
+											<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Archive</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="2022-23.html" class="nav-link">2022-23</a>
+													<a href="2022-23.html" class="nav-link  ltc-black">2022-23</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2022.html" class="nav-link">Spring 2022</a>
+													<a href="spring-2022.html" class="nav-link  ltc-black">Spring 2022</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2020.html" class="nav-link">Spring 2020</a>
+													<a href="spring-2020.html" class="nav-link  ltc-black">Spring 2020</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
+													<a href="spring-2019.html" class="nav-link  ltc-black">Spring 2019</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2018.html" class="nav-link">Spring 2018</a>
+													<a href="spring-2018.html" class="nav-link  ltc-black">Spring 2018</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2017.html" class="nav-link">Spring 2017</a>
+													<a href="spring-2017.html" class="nav-link  ltc-black">Spring 2017</a>
 												</li>
 											</ul>
 										</div>
 									</li>
 									<li class="nav-item">
-										<a href="podcast.html" class="nav-link">Podcast</a>
+										<a href="podcast.html" class="nav-link  ltc-black">Podcast</a>
 									</li>
 									<li class="nav-item">
-										<a href="contact.html" class="nav-link">Contact</a>
+										<a href="contact.html" class="nav-link  ltc-black">Contact</a>
 									</li>
 								</ul>
 							</div>
@@ -108,7 +108,7 @@
 
 <!-- bloc-1 -->
 <div class="bloc l-bloc full-width-bloc" id="bloc-1">
-	<div class="container bloc-lg bloc-no-padding-lg">
+	<div class="container bloc-no-padding-lg bloc-no-padding">
 		<div class="row">
 			<div class="col text-md-left text-center bgc-ferrari-red col-lg-12">
 				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" />
@@ -118,19 +118,34 @@
 </div>
 <!-- bloc-1 END -->
 
-<!-- bloc-30 -->
-<div class="bloc l-bloc" id="bloc-30">
-	<div class="container bloc-lg">
-		<div class="row">
+<!-- bloc-32 -->
+<div class="bloc tc-black none" id="bloc-32">
+	<div class="container bloc-no-padding-lg bloc-no-padding">
+		<div class="row voffset-md">
 			<div class="col text-md-left text-center">
-				<h1 class="mg-md">
-					Hello 2
-				</h1>
+				<div class="card">
+					<div class="card-header">
+						<h3 class="mg-clear">
+							Ryan Gaudion
+						</h3><img src="img/lazyload-ph.png" data-src="img/ryan.png" class="img-fluid mx-auto d-block lazyload" alt="ryan" />
+					</div>
+					<div class="card-body">
+						<h2 class="h2-28-style">
+							Thursday 19th October 2023 17:00-18:00 – Palmerston Lecture Theatre
+						</h2>
+						<p class="p-102-style text-left">
+							<br>Meet <a href="https://www.linkedin.com/in/ryan-gaudion/">Ryan Gaudion</a>, a software developer with four years of experience at <a href="https://www.lockheedmartin.com/">Lockheed Martin</a>. Ryan&rsquo;s educational journey continued at <a href="https://www.solent.ac.uk/">Solent University</a> where he completed his <a href="https://www.solent.ac.uk/courses/apprenticeships/digital-and-technology-solutions-professional-integrated-degree-apprenticeship">BSc Digital Technology Solutions Degree Apprenticeship</a> in 2023. In his spare time, Ryan works on many “side-projects” as well as <a class="link-0-style" href="https://www.youtube.com/c/RyanGaudion">sharing his passion for STEM</a> topics both online as well as at local schools.<br><br><a href="https://github.com/RyanGaudion/">github.com/RyanGaudion/</a><br><br>
+						</p><img src="img/lazyload-ph.png" data-src="img/ryan_YT.png" class="img-fluid mx-auto d-block lazyload" alt="ryan_YT" />
+						<p>
+							<br><a href="https://www.youtube.com/c/RyanGaudion">youtube.com/c/RyanGaudion</a>
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- bloc-30 END -->
+<!-- bloc-32 END -->
 
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 32 32"><path class="scroll-to-top-btn-icon" d="M30,22.656l-14-13-14,13"/></svg></a>
@@ -138,10 +153,33 @@
 
 
 <!-- bloc-33 -->
-<div class="bloc l-bloc full-width-bloc" id="bloc-33">
-	<div class="container bloc-lg bloc-no-padding-lg">
+<div class="bloc bgc-black" id="bloc-33">
+	<div class="container bloc-lg bloc-lg-lg">
 		<div class="row">
-			<div class="col text-md-left text-center bgc-ferrari-red">
+			<div class="offset-md-2 col-6 col-md-2 col-sm-3 col-lg-1 offset-lg-4">
+				<div class="text-center">
+					<a href="https://twitter.com/webDevSolent"><span class="fab fa-twitter-square icon-white icon-md"></span></a>
+				</div>
+			</div>
+			<div class="col-6 col-md-2 col-sm-3 col-lg-1">
+				<div class="text-center">
+					<a href="https://www.facebook.com/SolentUniversity/"><span class="fab fa-facebook-square icon-white icon-md"></span></a>
+				</div>
+			</div>
+			<div class="col-6 col-md-2 col-sm-3 col-lg-1">
+				<div class="text-center">
+					<a href="https://www.instagram.com/solentuniversity/"><span class="fab fa-instagram icon-white icon-md"></span></a>
+				</div>
+			</div>
+			<div class="col-6 col-md-2 col-sm-3 col-lg-1">
+				<div class="text-center">
+					<a href="https://www.youtube.com/user/SolentUniOfficial"><span class="fab fa-youtube-square icon-white icon-md"></span></a>
+				</div>
+			</div>
+			<div class="col-6 col-md-2 col-sm-3 col-lg-1">
+				<div class="text-center">
+					<a href="https://www.tiktok.com/@solentuniofficial"><span class="fab fa-tiktok icon-white icon-md"></span></a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -154,9 +192,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?1578"></script>
-<script src="./js/bootstrap.bundle.min.js?8986"></script>
-<script src="./js/blocs.min.js?1115"></script>
+<script src="./js/jquery.min.js?9617"></script>
+<script src="./js/bootstrap.bundle.min.js?7667"></script>
+<script src="./js/blocs.min.js?6899"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
