--- a/5th-oct-2023.html
+++ b/5th-oct-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7506">
-	<link rel="stylesheet" type="text/css" href="style.css?5842">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8083">
+	<link rel="stylesheet" type="text/css" href="style.css?4962">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Juniper Networks</title>
@@ -38,62 +38,62 @@
 			<div class="col">
 				<div class="row">
 					<div class="col-12">
-						<nav class="navbar navbar-light row navbar-expand-md">
-							<a class="navbar-brand ltc-black link-style" href="index.html">Happy Hour</a>
+						<nav class="navbar row navbar-expand-md navbar-light">
+							<a class="navbar-brand link-style ltc-black" href="index.html">Happy Hour</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggler navbar-toggler border-0 p-0 mr-md-0 ml-auto" data-toggle="collapse" data-target=".navbar-32798" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
 								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
-										<a href="index.html" class="nav-link a-btn">Home</a>
+										<a href="index.html" class="nav-link  ltc-black">Home</a>
 									</li>
 									<li class="nav-item">
-										<a href="about.html" class="nav-link">About</a>
+										<a href="about.html" class="nav-link  ltc-black">About</a>
 									</li>
 									<li class="nav-item">
 										<div class="dropdown btn-dropdown">
-											<a href="#" class="nav-link dropdown-toggle a-btn" data-toggle="dropdown" aria-expanded="false">Events</a>
+											<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Events</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="5th-oct-2023.html" class="nav-link a-btn">5th Oct 2023</a>
+													<a href="5th-oct-2023.html" class="nav-link  ltc-black">5th Oct 2023</a>
 												</li>
 												<li class="nav-item">
-													<a href="19th-oct-2023.html" class="nav-link a-btn">19th Oct 2023</a>
+													<a href="19th-oct-2023.html" class="nav-link  ltc-black">19th Oct 2023</a>
 												</li>
 											</ul>
 										</div>
 									</li>
 									<li class="nav-item">
 										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
+											<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Archive</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="2022-23.html" class="nav-link">2022-23</a>
+													<a href="2022-23.html" class="nav-link  ltc-black">2022-23</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2022.html" class="nav-link">Spring 2022</a>
+													<a href="spring-2022.html" class="nav-link  ltc-black">Spring 2022</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2020.html" class="nav-link">Spring 2020</a>
+													<a href="spring-2020.html" class="nav-link  ltc-black">Spring 2020</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
+													<a href="spring-2019.html" class="nav-link  ltc-black">Spring 2019</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2018.html" class="nav-link">Spring 2018</a>
+													<a href="spring-2018.html" class="nav-link  ltc-black">Spring 2018</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2017.html" class="nav-link">Spring 2017</a>
+													<a href="spring-2017.html" class="nav-link  ltc-black">Spring 2017</a>
 												</li>
 											</ul>
 										</div>
 									</li>
 									<li class="nav-item">
-										<a href="podcast.html" class="nav-link">Podcast</a>
+										<a href="podcast.html" class="nav-link  ltc-black">Podcast</a>
 									</li>
 									<li class="nav-item">
-										<a href="contact.html" class="nav-link">Contact</a>
+										<a href="contact.html" class="nav-link  ltc-black">Contact</a>
 									</li>
 								</ul>
 							</div>
@@ -108,7 +108,7 @@
 
 <!-- bloc-1 -->
 <div class="bloc l-bloc full-width-bloc" id="bloc-1">
-	<div class="container bloc-lg bloc-no-padding-lg">
+	<div class="container bloc-no-padding-lg bloc-no-padding">
 		<div class="row">
 			<div class="col text-md-left text-center bgc-ferrari-red col-lg-12">
 				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" />
@@ -123,7 +123,7 @@
 	<div class="container bloc-sm-lg bloc-sm">
 		<div class="row">
 			<div class="col text-md-left text-center">
-				<h1 class="tc-black-2 mg-sm h1-bloc-29-style ">
+				<h1 class="tc-black-2 mg-sm h1-bloc-29-style">
 					Juniper Networks
 				</h1><img src="img/lazyload-ph.png" data-src="img/HH_juniper.jpg" class="img-fluid mx-auto d-block lazyload" alt="HH_juniper" />
 				<p class="p-bloc-29-style">
@@ -195,10 +195,33 @@
 
 
 <!-- bloc-33 -->
-<div class="bloc l-bloc full-width-bloc" id="bloc-33">
-	<div class="container bloc-lg bloc-sm-lg">
+<div class="bloc bgc-black" id="bloc-33">
+	<div class="container bloc-lg bloc-lg-lg">
 		<div class="row">
-			<div class="col text-md-left text-center bgc-ferrari-red">
+			<div class="offset-md-2 col-6 col-md-2 col-sm-3 col-lg-1 offset-lg-4">
+				<div class="text-center">
+					<a href="https://twitter.com/webDevSolent"><span class="fab fa-twitter-square icon-white icon-md"></span></a>
+				</div>
+			</div>
+			<div class="col-6 col-md-2 col-sm-3 col-lg-1">
+				<div class="text-center">
+					<a href="https://www.facebook.com/SolentUniversity/"><span class="fab fa-facebook-square icon-white icon-md"></span></a>
+				</div>
+			</div>
+			<div class="col-6 col-md-2 col-sm-3 col-lg-1">
+				<div class="text-center">
+					<a href="https://www.instagram.com/solentuniversity/"><span class="fab fa-instagram icon-white icon-md"></span></a>
+				</div>
+			</div>
+			<div class="col-6 col-md-2 col-sm-3 col-lg-1">
+				<div class="text-center">
+					<a href="https://www.youtube.com/user/SolentUniOfficial"><span class="fab fa-youtube-square icon-white icon-md"></span></a>
+				</div>
+			</div>
+			<div class="col-6 col-md-2 col-sm-3 col-lg-1">
+				<div class="text-center">
+					<a href="https://www.tiktok.com/@solentuniofficial"><span class="fab fa-tiktok icon-white icon-md"></span></a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -211,9 +234,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9483"></script>
-<script src="./js/bootstrap.bundle.min.js?1452"></script>
-<script src="./js/blocs.min.js?3418"></script>
+<script src="./js/jquery.min.js?9617"></script>
+<script src="./js/bootstrap.bundle.min.js?7667"></script>
+<script src="./js/blocs.min.js?6899"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
