--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2578">
-	<link rel="stylesheet" type="text/css" href="style.css?5006">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3672">
+	<link rel="stylesheet" type="text/css" href="style.css?4454">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -118,7 +118,7 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-2 -->
-<div class="bloc tc-black l-bloc " id="bloc-2">
+<div class="bloc tc-black l-bloc" id="bloc-2">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
@@ -145,8 +145,8 @@
 				<div class="card">
 					<img src="img/lazyload-ph.png" data-src="img/ryan.png" class="img-fluid mx-auto lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
-						<p class="text-lg-center text-center p-bloc-2-style">
-							Ryan Gaudion<br />Side Project <br>and skill sharing<br><strong>19/10/2023</strong><br>
+						<p class="text-lg-center text-center p-bloc-2-style ">
+							Ryan Gaudion<br />Side Projects<br>and skill your sharing<br><strong>19/10/2023</strong><br>
 						</p><a href="19th-oct-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
 					</div>
 				</div>
@@ -255,9 +255,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9617"></script>
-<script src="./js/bootstrap.bundle.min.js?7667"></script>
-<script src="./js/blocs.min.js?6899"></script>
+<script src="./js/jquery.min.js?6104"></script>
+<script src="./js/bootstrap.bundle.min.js?4495"></script>
+<script src="./js/blocs.min.js?2804"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
